fixed code link in myproj, fixed spacing in gridel

--- a/styles/_my-projects.scss
+++ b/styles/_my-projects.scss
@@ -6,7 +6,6 @@
     @include flexPageDisplay;
     margin: 0.75rem;
     padding-top: 1rem;
-    border: 1px solid black;
 
     &__title {
       @include titleStyling();
@@ -28,8 +27,9 @@
     &__description {
       @include flexPageDisplay();
       align-items: flex-start;
-      justify-content: space-evenly;
-      margin-top: 2rem;
+      justify-content: space-around;
+      margin-top: 1rem;
+      height: 50%;
     }
 
     &__subtitle {
@@ -54,6 +54,7 @@
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
+      width: 100%;
     }
 
     &__label {
@@ -64,17 +65,15 @@
     }
 
     &__code {
-      position: relative;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 5rem;
+      margin-right: 3rem;
+    }
 
-      &--left {
-        top: -4px;
-        right: -3px;
-      }
-
-      &--right {
-        top: -3.65px;
-        right: 3px;
-      }
+    &__icon {
+      color: $color-primary;
     }
   }
 }
