--- a/styles/_technical-skills.scss
+++ b/styles/_technical-skills.scss
@@ -13,7 +13,6 @@
         }
 
         &__grid {
-            border: 2px solid black;
             display: grid;
             grid-template-rows: repeat(3, 1fr);
             grid-template-columns: repeat(3, 1fr);
@@ -29,12 +28,14 @@
         &__logo {
             font-size: 4rem;
             color: $color-primary;
+            opacity: 0.8;
+            margin-bottom: 0.4rem;
         }
 
         &__label {
             font-family: $font-primary;
             font-size: $font-small;
-            opacity: 90%;
+            opacity: 0.6;
             color: $color-secondary;
         }
     }
